[gd_scene load_steps=41 format=2]

[ext_resource path="res://Subrooms/HudBanner2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Subrooms/HudBanner1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/hudJ.tres" type="DynamicFont" id=3]
[ext_resource path="res://Stages/text setting.gd" type="Script" id=4]
[ext_resource path="res://src/timertext.gd" type="Script" id=5]
[ext_resource path="res://TextMain.tres" type="Theme" id=6]
[ext_resource path="res://Stages/tex.gd" type="Script" id=7]
[ext_resource path="res://Stages/hp.gd" type="Script" id=8]
[ext_resource path="res://Sprites/gui/TEXTBOX.png" type="Texture" id=9]
[ext_resource path="res://Sprites/gui/guicon3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/gui/Rian Map.png" type="Texture" id=11]
[ext_resource path="res://Sprites/gui/guicon1.png" type="Texture" id=12]
[ext_resource path="res://Sprites/gui/Healthicon1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/gui/chaincnt.png" type="Texture" id=14]
[ext_resource path="res://Sprites/gui/linkcnt.png" type="Texture" id=15]
[ext_resource path="res://Fonts/BrokenGlass.otf" type="DynamicFontData" id=16]
[ext_resource path="res://Objects/CounterChain.gd" type="Script" id=17]
[ext_resource path="res://Objects/CounterLink.gd" type="Script" id=18]
[ext_resource path="res://Sprites/gui/enemyhpover.png" type="Texture" id=19]
[ext_resource path="res://Sprites/gui/enemyhpprog.png" type="Texture" id=20]
[ext_resource path="res://Sprites/gui/enemyhpback.png" type="Texture" id=21]
[ext_resource path="res://Objects/Linktimer.gd" type="Script" id=22]
[ext_resource path="res://Objects/Chaintimer.gd" type="Script" id=23]
[ext_resource path="res://Sprites/gui/HudCircle.png" type="Texture" id=24]

[sub_resource type="Shader" id=124]
code = "shader_type canvas_item;

uniform int levels = 3;
uniform float spread = 0.01;

vec3 chromatic_slice(float t){
	vec3 res = vec3(1.0-t, 1.0 - abs(t - 1.0), t - 1.0);
	return max(res, 0.0);
}

void fragment(){
	vec3 sum;
	COLOR.rgb = vec3(0);
	vec2 offset = (UV - vec2(0.5))*vec2(1,-1);
	for(int i = 0; i < levels; i++){
		float t = 2.0*float(i)/float(levels-1); // range 0.0->2.0
		vec3 slice = vec3(1.0-t, 1.0 - abs(t - 1.0), t - 1.0);
		slice = max(slice, 0.0);
		sum += slice;
		vec2 slice_offset = (t-1.0)*spread*offset;
		COLOR.rgb += slice * texture(SCREEN_TEXTURE, SCREEN_UV + slice_offset).rgb;
	}
	COLOR.rgb /= sum;
}"

[sub_resource type="ShaderMaterial" id=125]
shader = SubResource( 124 )
shader_param/levels = 3
shader_param/spread = 0.005

[sub_resource type="Shader" id=126]
code = "shader_type canvas_item;

render_mode blend_mul;

uniform float u_amount = 0.1;

float get_noise(vec2 uv) {
    return fract(sin(dot(uv ,vec2(12.9898,78.233))) * 43758.5453);
}

void fragment() {
    float n = 2.0 * get_noise(UV + vec2(TIME, 0.0)) - 1.0;
    COLOR = texture(TEXTURE, UV) + n * u_amount;
}"

[sub_resource type="ShaderMaterial" id=127]
shader = SubResource( 126 )
shader_param/u_amount = 0.043

[sub_resource type="Shader" id=119]
code = "shader_type canvas_item;
render_mode unshaded;

void fragment() {
	vec4 c = textureLod(SCREEN_TEXTURE, SCREEN_UV, 0.0).rgba;
	c.r = 1.0 - c.r;
	c.g = 1.0 - c.g;
	c.b = 1.0 - c.b;
	COLOR.rgba = c;
}
"

[sub_resource type="ShaderMaterial" id=120]
render_priority = 20
shader = SubResource( 119 )

[sub_resource type="GDScript" id=121]
script/source = "extends ColorRect


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
	
"

[sub_resource type="GDScript" id=111]

[sub_resource type="Theme" id=117]
script = SubResource( 111 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=118]
animations = [ {
"frames": [ SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ) ],
"loop": true,
"name": "main",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=122]
size = 45
outline_size = 2
outline_color = Color( 0.0784314, 0, 1, 1 )
use_mipmaps = true
font_data = ExtResource( 16 )

[sub_resource type="Theme" id=123]
default_font = SubResource( 122 )

[node name="GUIStuff" type="CanvasLayer"]
layer = 30
script = ExtResource( 4 )

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource( 125 )
margin_right = 768.0
margin_bottom = 432.0

[node name="ColorRect3" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.0823529 )
material = SubResource( 127 )
margin_right = 768.0
margin_bottom = 431.0
color = Color( 0, 0, 0, 0 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource( 120 )
margin_right = 765.0
margin_bottom = 432.0
color = Color( 0.74902, 0.882353, 0.772549, 0.937255 )
script = SubResource( 121 )

[node name="Bosshud" type="Node2D" parent="."]
position = Vector2( -320, -240 )

[node name="textbox" type="Node2D" parent="."]
visible = false
position = Vector2( -316.183, -189.638 )

[node name="Sprite" type="Sprite" parent="textbox"]
position = Vector2( 698.652, 531.702 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="tex" type="Label" parent="textbox"]
margin_left = 512.0
margin_top = 499.272
margin_right = 963.0
margin_bottom = 602.272
theme = SubResource( 117 )
custom_fonts/font = ExtResource( 3 )
text = "何が起こっていますか？
しばらく前まではすべて順調でした！
Hey idiot!!! watch where you're steppin'!"
autowrap = true
script = ExtResource( 7 )

[node name="timer" type="Label" parent="."]
anchor_left = 0.062
anchor_top = 0.05
anchor_right = 0.287
anchor_bottom = 0.096
margin_left = 119.24
margin_top = -8.0
margin_right = 165.24
margin_bottom = 8.00006
rect_scale = Vector2( 1.00818, 1.20287 )
theme = ExtResource( 6 )
text = "af12rf"
align = 1
autowrap = true
max_lines_visible = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GUI" type="Node2D" parent="."]
position = Vector2( 19.3799, 2.0175 )

[node name="Piececnt2" type="Sprite" parent="GUI"]
position = Vector2( -11.3799, 13.9825 )
texture = ExtResource( 12 )

[node name="hpico" type="Sprite" parent="GUI"]
position = Vector2( 416.62, 33.9825 )
z_index = 4
texture = ExtResource( 13 )
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="GUI"]
position = Vector2( -3.3799, 339.982 )
z_index = 3
frames = SubResource( 118 )
animation = "main"
frame = 3
playing = true

[node name="Sprite2" type="Sprite" parent="GUI"]
visible = false
position = Vector2( 828.061, 539.136 )
scale = Vector2( 2, 2 )
z_index = 3
texture = ExtResource( 10 )

[node name="Hudban1" parent="GUI" instance=ExtResource( 2 )]
position = Vector2( 424.62, 14.9825 )
z_index = -1

[node name="Hudban2" parent="GUI" instance=ExtResource( 1 )]
position = Vector2( 409.62, 342.983 )
z_index = -1

[node name="ChainCnt" type="Sprite" parent="GUI"]
modulate = Color( 1, 1, 1, 0.592157 )
position = Vector2( 429.62, 129.982 )
texture = ExtResource( 14 )

[node name="CounterChain" type="Label" parent="GUI/ChainCnt"]
modulate = Color( 1, 0.568627, 0, 1 )
margin_left = -45.0
margin_top = -38.0
margin_right = 36.0
margin_bottom = 4.0
theme = SubResource( 123 )
text = "1234"
align = 1
valign = 1
script = ExtResource( 17 )

[node name="Chaintimer" type="TextureProgress" parent="GUI/ChainCnt"]
margin_left = -34.0
margin_top = 8.00001
margin_right = 30.0
margin_bottom = 32.0
texture_under = ExtResource( 21 )
texture_over = ExtResource( 19 )
texture_progress = ExtResource( 20 )
tint_under = Color( 1, 0, 0, 1 )
tint_progress = Color( 0, 1, 0.0196078, 1 )
script = ExtResource( 23 )

[node name="LinkCnt" type="Sprite" parent="GUI"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 427.62, 212.983 )
texture = ExtResource( 15 )

[node name="CounterLink" type="Label" parent="GUI/LinkCnt"]
margin_left = -43.5
margin_top = -40.5
margin_right = 37.5
margin_bottom = 5.49998
theme = SubResource( 123 )
text = "1234"
align = 1
valign = 1
script = ExtResource( 18 )

[node name="Linktimer" type="TextureProgress" parent="GUI/LinkCnt"]
margin_left = -30.5
margin_top = 10.5
margin_right = 33.5
margin_bottom = 34.5
texture_under = ExtResource( 21 )
texture_over = ExtResource( 19 )
texture_progress = ExtResource( 20 )
tint_under = Color( 0.00784314, 0, 1, 1 )
tint_progress = Color( 0, 1, 0.0196078, 1 )
script = ExtResource( 22 )

[node name="HudCircle" type="Sprite" parent="GUI"]
position = Vector2( 414.62, 34.9825 )
texture = ExtResource( 24 )

[node name="livescnt" type="Label" parent="."]
anchor_left = 0.221188
anchor_top = -1.12212
anchor_right = 0.446379
anchor_bottom = -1.07506
margin_left = -74.1702
margin_top = 743.963
margin_right = -73.1702
margin_bottom = 759.963
rect_scale = Vector2( 1.00818, 1.20287 )
theme = ExtResource( 6 )
text = "af12rf"
autowrap = true
max_lines_visible = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="scorecnt" type="Label" parent="."]
anchor_left = 1.2047
anchor_top = -1.03634
anchor_right = 2.09011
anchor_bottom = -0.90902
margin_left = -569.256
margin_top = 712.082
margin_right = -568.256
margin_bottom = 726.691
theme = ExtResource( 6 )
text = "af12rf"
align = 1
autowrap = true
max_lines_visible = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Piececnt" type="Label" parent="."]
anchor_left = 0.252699
anchor_top = -0.00256056
anchor_right = 0.477699
anchor_bottom = 0.0434395
margin_left = -102.296
margin_top = 11.9218
margin_right = -101.296
margin_bottom = 27.9218
rect_scale = Vector2( 1.00818, 1.20287 )
theme = ExtResource( 6 )
text = "af12rf"
autowrap = true
max_lines_visible = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="boltcnt" type="Label" parent="."]
visible = false
anchor_left = 1.11128
anchor_top = 1.74275
anchor_right = 1.33628
anchor_bottom = 1.78875
margin_left = -80.4135
margin_top = -232.595
margin_right = -79.4135
margin_bottom = -216.595
rect_scale = Vector2( 1.00818, 1.20287 )
text = "af12rf"
autowrap = true
max_lines_visible = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}
